# sdk-rust

./: Cargo.toml  README.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
bevy-mod-indigauge/: Cargo.toml  README.md
bevy-mod-indigauge/examples/: breakout.rs  feedback_egui.rs  flappy_bird.rs  minimal.rs
bevy-mod-indigauge/src/: api_types.rs  config.rs  event.rs  feedback.rs  http_runtime.rs  lib.rs  plugin.rs  retry.rs  session.rs  tracing.rs  utils.rs
bevy-mod-indigauge/src/event/: resources.rs  systems.rs  utils.rs
bevy-mod-indigauge/src/feedback/: components.rs  egui.rs  helpers.rs  observers.rs  resources.rs  systems.rs  types.rs
bevy-mod-indigauge/src/session/: events.rs  observers.rs  resources.rs  systems.rs  utils.rs
bevy-mod-indigauge/tests/: multi_app_logging_test.rs  plugin_test.rs
indigauge-core/: Cargo.toml  README.md
indigauge-core/src/: event.rs  hardware.rs  http.rs  lib.rs  panic.rs  runtime.rs  state.rs  tracing.rs  utils.rs
indigauge-core/tests/: integration_test.rs
indigauge-types/: Cargo.toml  README.md
indigauge-types/src/: api.rs  config.rs  event.rs  feedback.rs  lib.rs  session.rs
indigauge-types/tests/: types_test.rs
