[workspace]
resolver = "3"
members = [
    "bevy-mod-indigauge", 
    "indigauge-core",
    "indigauge-types"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[patch."https://github.com/extrawurst/bevy_mod_reqwest.git"]
bevy_mod_reqwest = { path = "vendor/bevy_mod_reqwest" }

