[package]
name = "bevy-mod-indigauge"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Understand your users. Grow your game. Track events, session health, and user sentiment with zero fuss"
repository = "https://github.com/Indigauge/sdk-rust/tree/main/bevy-mod-indigauge"
homepage = "https://www.indigauge.com"
documentation = "https://docs.rs/bevy-mod-indigauge"
keywords = ["indigauge", "feedback", "events", "indie", "game"]
categories = ["development-tools", "game-development"]
readme = "README.md"

include = ["src/**/*", "README.md", "LICENSE", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["panic_handler", "feedback"]
panic_handler = ["dep:reqwest", "indigauge-core/panic_handler"]
tracing = ["dep:tracing-subscriber", "indigauge-core/tracing"]
feedback = ["bevy/bevy_ui", "bevy/bevy_picking", "bevy/bevy_ui_picking_backend", "dep:image", "dep:bevy_text_edit", "indigauge-types/feedback"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_window",
  "sysinfo_plugin",
  "bevy_state",
  "bevy_render"
]}
serde.workspace = true
serde_json.workspace = true
once_cell = "1"
crossbeam-channel = "0.5"
bevy_text_edit = { version = "0.5", optional = true }
image = { version = "0.24", optional = true }
bevy_mod_reqwest = { version = "0.18" }

indigauge-types = { path = "../indigauge-types", version = "0.3.0", default-features = false }
indigauge-core = { path = "../indigauge-core", version = "0.3.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dirs = "6.0"
uuid = { version = "1", features = ["serde", "v4"] }
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
bevy = { version = "0.15" }
tracing = { version = "0.1" }

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["default"]

[[example]]
name = "breakout"
path = "examples/breakout.rs"
required-features = ["default"]
