[package]
name = "bevy-mod-indigauge"
version = "0.7.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Understand your users. Grow your game. Track events, session health, and user sentiment with zero fuss"
repository = "https://github.com/Indigauge/sdk-rust/tree/main/bevy-mod-indigauge"
homepage = "https://www.indigauge.com"
documentation = "https://docs.rs/bevy-mod-indigauge"
keywords = ["bevy", "feedback", "events", "analytics", "game"]
categories = ["development-tools", "game-development"]
readme = "README.md"

include = ["src/**/*", "README.md", "LICENSE", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true

[features]
default = [
  "panic_handler", 
  "feedback"
]
panic_handler = [
  "indigauge-core/panic_handler"
]
tracing = [
  "dep:tracing-subscriber", 
  "indigauge-core/tracing"
]
feedback = [
  "bevy/bevy_ui",
  "bevy/bevy_ui_widgets",
  "bevy/bevy_picking",
  "bevy/ui_picking",
  "dep:bevy_feathers",
  "dep:image"
]
feedback_egui = [
  "feedback",
  "bevy_egui"
]

[dependencies]
bevy = { version = "0.19", default-features = false, features = [
  "std",
  "async_executor",
  "bevy_window",
  "sysinfo_plugin",
  "bevy_state",
  "bevy_render",
  "bevy_log",
  "bevy_ui_widgets",
  "scene"
]}
serde.workspace = true
serde_json.workspace = true
crossbeam-channel = "0.5"
anyhow = "1"
bytes = "1"
futures-lite = "2"
bevy_egui = { version = "0.41", optional = true }
bevy_feathers = { version = "0.19", optional = true }
image = { version = "0.25", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

indigauge-core = { path = "../indigauge-core", version = "0.7.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-compat = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

[dev-dependencies]
bevy = { version = "0.19" }
tracing = { version = "0.1" }
winit = { version = "0.30", features = ["x11"] }

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["default"]

[[example]]
name = "breakout"
path = "examples/breakout.rs"
required-features = ["default"]

[[example]]
name = "flappy_bird"
path = "examples/flappy_bird.rs"
required-features = ["default"]

[[example]]
name = "feedback_egui"
path = "examples/feedback_egui.rs"
required-features = ["feedback_egui"]
