[package]
name = "indigauge-core"
version = "0.3.1"
edition = "2024"

[features]
default = []
panic_handler = ["reqwest"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
indigauge-types = { path = "../indigauge-types", version = "0.3.0" }
serde_json.workspace = true
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]
optional = true
