[package]
name = "indigauge-core"
version = "0.6.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Core primitives for the Indigauge Rust SDK: event macros, tracing layer, and helpers"
repository = "https://github.com/Indigauge/sdk-rust/tree/main/indigauge-core"
homepage = "https://www.indigauge.com"
documentation = "https://docs.rs/indigauge-core"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []
panic_handler = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
indigauge-types = { path = "../indigauge-types", version = "0.6.0" }
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["registry"], optional = true }

bytes = "1"
crossbeam-channel = "0.5.15"

[dependencies.reqwest]
version = "0.12"
features = ["json", "rustls-tls", "blocking"]

[target.'cfg(not(target_family = "wasm"))'.dependencies]
dirs = "6.0"
uuid = { version = "1", features = ["v4"] }
